ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formula-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-lb-service # Your service name
            port:
              number: 8080     # The port your service is listening on
